        - DirectoryResource class in engine now has a protected
          getDirectoryContent() method. Suggested by Gordon Mohr.
        - Implemented Text#toString() in the Atom extension.
        - Completed list of registered media types. Suggested by Remi 
          Dewitte.
        - JAX-RS extension now leverages the new security API.
          Contributed by Bruno Dumon.
    - API changes
        - Added Role class and "roles" property to Application.
        - Fully refactored the security package introduce in 1.2 M1 
          based on community feed-back.
        - Added Realm, MemoryRealm classes and "realms" property to 
          Component.
        - Added "verifier" and "enroler" properties to Context.
        - Reverted represent*() auto-matching support for further 
          discussions. Suggested by Tim Peierls.
        - Added constructors with feed URI in the Feed class of the Atom 
          extension.
        - Added "indent" property to DomRepresentation. Suggested by
          Cliff Binstock.
        - Added support of Shared Key and Shared Key Lite authentication 
          schemes developed by Microsoft. Suggested by Steve Sfartz.
        - WadlApplication now invokes the findTarget() method on Finder 
          instances instead of the createTarget() one. 
          Suggested by Leigh Klotz.
        - Added Delete, Get, Options, Post and Put annotations
          to the org.restlet.resource package. Based on community 
          feed-back and suggestions by Tim Peierls.
        - Added org.restlet.resource.UniformResource and ClientResource
          classes as part of our new Resource API.
        - Added createClientInfo() method on Variant.
        - Added a Message#getEntityAsText() method caching the text
          content to allow several reads along a chain of filters.
        - Added a Server#setTarget() method taking a Resource class as a
          parameter. This is useful very minimalistic examples.